--- a/articles/logic-apps/index.yml
+++ b/articles/logic-apps/index.yml
@@ -1,18 +1,12 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 2d1c2aaa47d056a56d6fb0fc09f4de8072258c9a
-ms.sourcegitcommit: b3d74ce0a4acea922eadd96abfb7710ae79356e0
-ms.translationtype: HT
-ms.contentlocale: nl-NL
-ms.lasthandoff: 02/14/2019
-ms.locfileid: "56242128"
 documentType: LandingData
 title: Documentatie voor Azure Logic Apps
 metadata:
-  title: Documentatie voor Azure Logic Apps - zelfstudies, API-verwijzing | Microsoft Docs
-  description: Azure Logic Apps vereenvoudigt de manier waarop u geautomatiseerde, schaalbare werkstromen bouwt die apps en gegevens in cloudservices en on-premises systemen integreren. Leer hoe u met onze snelstartgidsen, zelfstudies, sjablonen en API’s logische apps die zakelijke processen automatiseren, maakt, ontwerpt en implementeert.
+  title: 'Documentatie voor Azure Logic Apps - zelfstudies, API-verwijzing | Microsoft Docs'
+  description: 'Azure Logic Apps vereenvoudigt de manier waarop u geautomatiseerde, schaalbare werkstromen bouwt die apps en gegevens in cloudservices en on-premises systemen integreren. Leer hoe u met onze snelstartgidsen, zelfstudies, sjablonen en API’s logische apps die zakelijke processen automatiseren, maakt, ontwerpt en implementeert.'
   services: logic-apps
-  author: czeumault
-  manager: estfan
+  author: ecfan
+  manager: carmonm
   ms.service: logic-apps
   ms.tgt_pltfrm: na
   ms.devlang: na
@@ -20,36 +14,36 @@ metadata:
   ms.date: 01/09/2018
   ms.author: estfan
 abstract:
-  description: Azure Logic Apps vereenvoudigt de manier waarop u geautomatiseerde, schaalbare werkstromen bouwt die apps en gegevens in cloudservices en on-premises systemen integreren. Leer hoe u met onze snelstartgidsen, zelfstudies, sjablonen en API’s logische apps die zakelijke processen automatiseren, maakt, ontwerpt en implementeert.
+  description: 'Azure Logic Apps vereenvoudigt de manier waarop u geautomatiseerde, schaalbare werkstromen bouwt die apps en gegevens in cloudservices en on-premises systemen integreren. Leer hoe u met onze snelstartgidsen, zelfstudies, sjablonen en API’s logische apps die zakelijke processen automatiseren, maakt, ontwerpt en implementeert.'
 sections:
-- title: QuickStarts van vijf minuten
-  items:
-  - type: paragraph
-    text: Leer hoe u een logische app in Azure maakt.
-  - type: list
-    style: icon48
+  - title: QuickStarts van vijf minuten
     items:
-    - image:
-        src: https://docs.microsoft.com/media/common/i_portal.svg
-      text: Azure Portal
-      href: /azure/logic-apps/quickstart-create-first-logic-app-workflow
-- title: Stapsgewijze zelfstudies
-  items:
-  - type: paragraph
-    text: Leer hoe u een logische app maakt die volgens een planning wordt uitgevoerd en gegevens integreert in Azure-services, Microsoft-services en SaaS-apps (software als een service).
-  - type: list
-    style: ordered
+      - type: paragraph
+        text: Leer hoe u een logische app in Azure maakt.
+      - type: list
+        style: icon48
+        items:
+          - image:
+              src: 'https://docs.microsoft.com/media/common/i_portal.svg'
+            text: Azure Portal
+            href: /azure/logic-apps/quickstart-create-first-logic-app-workflow
+  - title: Stapsgewijze zelfstudies
     items:
-    - html: <a href="/azure/logic-apps/tutorial-build-schedule-recurring-logic-app-workflow">Verkeer controleren met een logische app op basis van een planning</a>
-    - html: <a href="/azure/logic-apps/tutorial-process-mailing-list-subscriptions-workflow">Mailinglijstaanvragen beheren met een logische app</a>
-    - html: <a href="/azure/logic-apps/tutorial-process-email-attachments-workflow">E-mails en bijlagen verwerken met een logische app</a>
-- title: Naslaginformatie
-  items:
-  - type: list
-    style: cards
-    className: cardsD
+      - type: paragraph
+        text: 'Leer hoe u een logische app maakt die volgens een planning wordt uitgevoerd en gegevens integreert in Azure-services, Microsoft-services en SaaS-apps (software als een service).'
+      - type: list
+        style: ordered
+        items:
+          - html: <a href="/azure/logic-apps/tutorial-build-schedule-recurring-logic-app-workflow">Verkeer controleren met een logische app op basis van een planning</a>
+          - html: <a href="/azure/logic-apps/tutorial-process-mailing-list-subscriptions-workflow">Mailinglijstaanvragen beheren met een logische app</a>
+          - html: <a href="/azure/logic-apps/tutorial-process-email-attachments-workflow">E-mails en bijlagen verwerken met een logische app</a>
+  - title: Naslaginformatie
     items:
-    - title: Opdrachtregel
-      html: <p><a href="/powershell/module/az.logicapp">Azure PowerShell</a></p>
-    - title: REST
-      html: <p><a href="/rest/api/logic/">Naslaginformatie over REST-API</a></p>
+      - type: list
+        style: cards
+        className: cardsD
+        items:
+          - title: Opdrachtregel
+            html: <p><a href="/powershell/module/az.logicapp">Azure PowerShell</a></p>
+          - title: REST
+            html: <p><a href="/rest/api/logic/">Naslaginformatie over REST-API</a></p>
