--- a/articles/notification-hubs/index.yml
+++ b/articles/notification-hubs/index.yml
@@ -44,8 +44,8 @@ sections:
       - type: list
         style: unordered
         items:
-          - html: '<a href="https://github.com/Azure/azure-notificationhubs-android">Android SDK</a>'
-          - html: '<a href="https://github.com/Azure/azure-notificationhubs-ios">iOS SDK</a>'
+          - html: '<a href="https://github.com/Azure/azure-notificationhubs-android">Android-SDK</a>'
+          - html: '<a href="https://github.com/Azure/azure-notificationhubs-ios">iOS-SDK</a>'
           - html: '<a href="https://github.com/Azure/azure-notificationhubs-dotnet">.NET SDK</a>'
           - html: '<a href="https://github.com/Azure/azure-notificationhubs-samples">Opslagplaats met voorbeelden (andere platformen)</a>'
           - html: <a href="/azure/notification-hubs/samples-powershell">PowerShell</a>
@@ -56,5 +56,4 @@ sections:
         items:
           - html: '<a href="https://docs.microsoft.com/powershell/module/az.notificationhubs">Azure PowerShell</a>'
           - html: <a href="/dotnet/api/microsoft.azure.notificationhubs">.NET SDK</a>
-          - html: <a href="/rest/api/notificationhubs">REST API voor beheer</a>
-          - html: '<a href="https://docs.microsoft.com/previous-versions/azure/reference/dn223264(v%3dazure.100)">REST-API voor Notification Hubs-service</a>'
+          - html: <a href="/rest/api/notificationhubs">Naslaginformatie over REST-API</a>
