--- a/articles/firewall/toc.yml
+++ b/articles/firewall/toc.yml
@@ -1,84 +1,77 @@
-items:
 - name: Documentatie voor Azure Firewall
   href: index.yml
 - name: Overzicht
   items:
-  - name: Wat is Azure Firewall?
-    href: overview.md
+    - name: Wat is Azure Firewall?
+      href: overview.md
 - name: Zelfstudies
-  items:
-  - name: Implementeren en configureren
-    href: tutorial-firewall-deploy-portal.md
-  - name: In hybride netwerk implementeren
-    href: tutorial-hybrid-ps.md
-  - name: Inkomend verkeer filteren met DNAT
-    href: tutorial-firewall-dnat.md
-  - name: Diagnostische logboeken bewaken
-    href: tutorial-diagnostics.md
   expanded: true
+  items:
+    - name: Implementeren en configureren
+      href: tutorial-firewall-deploy-portal.md
+    - name: In hybride netwerk implementeren
+      href: tutorial-hybrid-ps.md
+    - name: Inkomend verkeer filteren met DNAT
+      href: tutorial-firewall-dnat.md
+    - name: Diagnostische logboeken bewaken
+      href: tutorial-diagnostics.md
 - name: Voorbeelden
   items:
-  - name: Azure PowerShell
-    href: sample-powershell.md
-  - name: Azure Monitor-logboeken
-    href: log-analytics-samples.md
+    - name: Azure PowerShell
+      href: sample-powershell.md
+    - name: Azure Monitor-logboeken
+      href: log-analytics-samples.md
 - name: Concepten
   items:
-  - name: FQDN-tags
-    href: fqdn-tags.md
-  - name: FQDN's voor infrastructuur
-    href: infrastructure-fqdns.md
-  - name: Logboeken en metrische gegevens
-    href: logs-and-metrics.md
-  - name: Informatie over bedreigingen
-    href: threat-intel.md
-  - name: Logica voor verwerking van regels
-    href: rule-processing.md
-  - name: Servicetags
-    href: service-tags.md
+    - name: FQDN-tags
+      href: fqdn-tags.md
+    - name: FQDN's voor infrastructuur
+      href: infrastructure-fqdns.md
+    - name: Logboeken en metrische gegevens
+      href: logs-and-metrics.md
+    - name: Informatie over bedreigingen
+      href: threat-intel.md
+    - name: Logica voor verwerking van regels
+      href: rule-processing.md
+    - name: Servicetags
+      href: service-tags.md
 - name: Handleidingen
   items:
-  - name: Implementeren met Azure PowerShell
-    href: deploy-ps.md
-  - name: Implementeren met behulp van een sjabloon
-    href: deploy-template.md
-  - name: Integreren met load balancer
-    href: integrate-lb.md
+    - name: Implementeren met Azure PowerShell
+      href: deploy-ps.md
+    - name: Implementeren met behulp van een sjabloon
+      href: deploy-template.md
+    - name: Integreren met load balancer
+      href: integrate-lb.md
 - name: Naslaginformatie
   items:
-  - name: Azure-CLI
-    href: /cli/azure/network
-  - name: Azure PowerShell
-    href: /powershell/module/az.network/new-azfirewall
-  - name: .NET
-    href: /dotnet/api
-  - name: Java
-    href: /java/api
-  - name: Node.js
-    href: https://azure.microsoft.com/develop/nodejs/#azure-sdk
-  - name: Python
-    href: https://azure.microsoft.com/develop/python/
-  - name: REST
-    href: /rest/api/firewall
-  - name: Azure Resource Manager
-    href: ../azure-resource-manager/resource-group-overview.md
+    - name: Azure-CLI
+      href: /cli/azure/network
+    - name: Azure PowerShell
+      href: /powershell/module/az.network/new-azfirewall
+    - name: .NET
+      href: /dotnet/api
+    - name: Java
+      href: /java/api
+    - name: Node.js
+      href: 'https://azure.microsoft.com/develop/nodejs/#azure-sdk'
+    - name: Python
+      href: 'https://azure.microsoft.com/develop/python/'
+    - name: REST
+      href: /rest/api/firewall
+    - name: Azure Resource Manager
+      href: ../azure-resource-manager/resource-group-overview.md
 - name: Resources
   items:
-  - name: Veelgestelde vragen
-    href: firewall-faq.md
-  - name: Auteursjablonen
-    href: ../azure-resource-manager/resource-group-authoring-templates.md
-  - name: Azure-roadmap
-    href: https://azure.microsoft.com/roadmap/
-  - name: Communitysjablonen
-    href: https://azure.microsoft.com/documentation/templates
-  - name: Prijzen
-    href: https://azure.microsoft.com/pricing/details/azure-firewall/
-  - name: Regionale beschikbaarheid
-    href: https://azure.microsoft.com/regions/services/
-ms.openlocfilehash: a5f0125020cd0ed340127bb39c727bbe070721c6
-ms.sourcegitcommit: c174d408a5522b58160e17a87d2b6ef4482a6694
-ms.translationtype: HT
-ms.contentlocale: nl-NL
-ms.lasthandoff: 04/18/2019
-ms.locfileid: "59792180"
+    - name: Veelgestelde vragen
+      href: firewall-faq.md
+    - name: Auteursjablonen
+      href: ../azure-resource-manager/resource-group-authoring-templates.md
+    - name: Azure-roadmap
+      href: 'https://azure.microsoft.com/roadmap/'
+    - name: Communitysjablonen
+      href: 'https://azure.microsoft.com/documentation/templates'
+    - name: Prijzen
+      href: 'https://azure.microsoft.com/pricing/details/azure-firewall/'
+    - name: Regionale beschikbaarheid
+      href: 'https://azure.microsoft.com/regions/services/'
