--- a/articles/cognitive-services/QnAMaker/toc.yml
+++ b/articles/cognitive-services/QnAMaker/toc.yml
@@ -58,6 +58,8 @@
           href: ./Quickstarts/create-publish-kb-csharp-sdk.md
         - name: Node.js
           href: ./Quickstarts/create-publish-kb-nodejs-sdk.md
+        - name: Python
+          href: ./Quickstarts/python-sdk.md
 - name: Zelfstudies
   items:
     - name: Een knowledge base maken en vragen beantwoorden
